plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'me.bsuir'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	dependencies {
		implementation("org.springframework.boot:spring-boot-starter-data-jpa")
		implementation("org.springframework.boot:spring-boot-starter-web")
		implementation("me.paulschwarz:spring-dotenv:4.0.0")
		implementation("org.springframework.boot:spring-boot-starter-security")
		implementation("org.modelmapper:modelmapper:3.1.1")
		implementation("org.springframework.boot:spring-boot-starter-validation")
		implementation("org.mapstruct:mapstruct:1.6.3")
		runtimeOnly("org.postgresql:postgresql")
		compileOnly("org.projectlombok:lombok")
		developmentOnly("org.springframework.boot:spring-boot-devtools")
		annotationProcessor("org.projectlombok:lombok")
		annotationProcessor("org.mapstruct:mapstruct-processor:1.6.3")
		testImplementation("org.springframework.boot:spring-boot-starter-test")
		testRuntimeOnly("org.junit.platform:junit-platform-launcher")
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
